# cootsmania

./: .dockerignore  .gitignore  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile  README.md  bots.data  bots.json  config.json  cootsmania.js  cootsmania.wasm  index.html  level.json  ludwig-jam-2023.js  ludwig-jam-2023.wasm  start.sh
.github/workflows/: flow.yml
assets/: fakefile.txt  level.json
assets/player/: _list.json
assets/shaders/: foo.glsl  outline.glsl  texture_instancing.glsl
src/: bots.rs  game.rs  interop.rs  interpolation.rs  main.rs  server.rs  test.rs  ui.rs
