[package]
name = "cootsmania"
version = "0.1.0"
edition = "2021"
default-run = "cootsmania"

[package.metadata.geng]
assets = ["config.json", "level.json", "bots.data", "assets"]

[profile.release]
debug = true

[dependencies]
geng = { git = "https://github.com/kuviman/geng" }
serde = "1"
gilrs = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustrict = "0.5"
ctrlc = "3"
