[package]
name = "cootsmania"
version = "0.1.0"
edition = "2021"
default-run = "cootsmania"

[package.metadata.geng]
assets = ["config.json", "level.json", "bots.data", "assets"]

[dependencies]
geng = { git = "https://github.com/kuviman/geng", rev = "e5da7c432e52e376d6a975f80a28381f0a7a7c4b" }
serde = "1"

# https://gitlab.com/gilrs-project/gilrs/-/merge_requests/84
[dependencies.gilrs]
git = "https://gitlab.com/gilrs-project/gilrs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustrict = "0.5"
ctrlc = "3"
